salesforce/force-app/main/default/objects/Produto__c/fields/Codigo_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_produto__c</fullName>
    <label>Código do produto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>