salesforce/force-app/main/default/objects/Produto__c/fields/Descricao_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Descricao_do_produto__c</fullName>
    <label>Descrição do produto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>