salesforce/force-app/main/default/objects/Produto__c/fields/Preco_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Preco_do_produto__c</fullName>
    <label>Preço do produto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>